# arxiv-daily

./: .env.example  .gitignore  README.md  construct_pdf.py  main.py  paper.py  prompts.py  pyproject.toml  settings.py  utils.py
.github/workflows/: arxiv-daily.yml
